Fix icon spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,6 +43,7 @@
   font-size: 60px;
   color: #4A4656;
   vertical-align: middle;
+  margin-left: 20px;
 }
 #how .how-item h4 {
   padding-top: 20px;
